logs/farnsworth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/farnsworth'...
Compiling './lib/python3.5/site-packages/farnsworth/fusor.py'...
***   File "./lib/python3.5/site-packages/farnsworth/fusor.py", line 35
    react_code = f"(() => {{ {component} ; return React.createElement({name}, {jsProps}, {jsChildren}); }})()"
                                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/farnsworth/js'...
Listing './lib/python3.5/site-packages/farnsworth/tests'...
Listing './lib/python3.5/site-packages/farnsworth/tests/input'...
Listing './lib/python3.5/site-packages/farnsworth/tests/output'...
Listing './lib/python3.5/site-packages/farnsworth-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_mini_racer'...
Listing './lib/python3.5/site-packages/py_mini_racer/extension'...
Listing './lib/python3.5/site-packages/py_mini_racer-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
